# ai-bootcamp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-10-week4-enrichment-design.md  2026-06-11-w04c07-decision-boundary-slides-design.md
scripts/: build_slides.py  build_week01_notebooks.py  build_week03_notebooks.py  build_week04_notebooks.py  gen_slides_images_w3c2.py  gen_slides_images_w3c3.py  gen_slides_images_w3c5.py  merge_week03_slides.py
shared/: data_utils.py
shared/slides-template/: interactive.css  interactive.js  reveal.html  theme.css
weeks/week-01-foundations/: README.md
weeks/week-01-foundations/course-01-numpy/: README.md  lecture.ipynb
weeks/week-01-foundations/course-01-numpy-i/: README.md  lecture.ipynb
weeks/week-01-foundations/course-02-numpy-ii/: README.md  lecture.ipynb
weeks/week-01-foundations/course-02-pandas/: README.md  lecture.ipynb
weeks/week-01-foundations/course-03-matplotlib/: README.md  lecture.ipynb
weeks/week-01-foundations/course-03-pandas-i/: README.md  lecture.ipynb
weeks/week-01-foundations/course-03-viz-scipy/: README.md  lecture.ipynb
weeks/week-01-foundations/course-04-pandas-ii/: README.md  lecture.ipynb
weeks/week-01-foundations/course-04-viz-capstone-scipy/: README.md
weeks/week-01-foundations/course-05-matplotlib/: README.md  lecture.ipynb
weeks/week-01-foundations/course-06-viz-capstone-scipy/: README.md  lecture.ipynb
weeks/week-03-machine-learning/: README.md
weeks/week-04-classification/: README.md
weeks/week-04-classification/course-03-lda-qda/: README.md  (+1 more)
(+107 files in other folders)
