[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "Quera AI Bootcamp — course materials"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
    "requests>=2.31",
]

[tool.uv]
package = false
